syntax = "proto3";

package ndm;

// Might need add github.com/openebs/node-disk-manager and change the path of this file to avoid depreciation
option go_package="ndm";


// This service can return generic information 
service Info {
    // FindVersion Method gets the version information of the NDM components installed
    rpc FindVersion (Null) returns (VersionInfo);

  }

// This service returns status of ISCSI
service ISCSI{
    rpc Status(Null) returns (ISCSIStatus);
  }

service Node{
      
  //  FindNodeName method is used find the name of the node on which NDM is running on 
    rpc Name(Null) returns (NodeName) ;
  
  // ListBlockDevices method is used to return all the block devices found in hierarchy by NDM
  rpc ListBlockDevices(Null) returns (BlockDevices);
  
  // ListBlockDeviceDetails method is used to find SMART info about a block device.
  // Only the name field is required for input 
  rpc ListBlockDeviceDetails(BlockDevice) returns (BlockDeviceDetails); 

  // Sets 2MB hugePages on this node.  
  // Note: Calling this method doesn't gurantee that the said number of pages will be set.
	// This is because OS might not have the demanded memory. It would be best to check if this is satisfied with GetHugePages
  rpc SetHugepages(Hugepages) returns (HugepagesResult);

  // Gets the number of huge pages set on the node
  rpc GetHugepages(Null) returns (Hugepages); 
  
  // Rescan syncs etcd and NDM's local state
  rpc Rescan(Null) returns (Message);
}

message Message{
  string msg = 1;
}

message Hugepages{
  int32 pages = 1;
}

message HugepagesResult{
  bool result = 1; 
}


message BlockDeviceDetails{
    string Compliance = 1;
    string Vendor = 2;           
    string ModelNumber = 3;      
    string SerialNumber = 4;     
    string FirmwareRevision =  5; 
    string WWN = 6;              
    uint64 Capacity = 7;         
    uint32 LBSize = 8 ;           
    uint32 PBSize = 9 ;           
    uint32 RotationRate = 10;    
    string ATAMajorVersion = 11; 
    string ATAMinorVersion = 12; 
    string AtaTransport = 13;     
}

message BlockDevice{
  string name = 1;
  string type = 2; // Type can be Disk, Loop, LVM, etc
  repeated string partitions = 3;

  // Other fields about disk
}

message  BlockDevices{
  repeated BlockDevice blockdevices = 1;
}

message ISCSIStatus{
  bool Status = 1 ;
}


message VersionInfo {
    string Version = 1;
    string GitCommit = 2;
}


message NodeName {
  string NodeName = 1; 
}

message Null{
 // Intentionally empty 
}